[gd_scene load_steps=7 format=3 uid="uid://6ub8g0eg222s"]

[ext_resource type="Script" path="res://scripts/enemies/crusader.gd" id="1_k7bas"]
[ext_resource type="Texture2D" uid="uid://dvwvaorkequih" path="res://assets/crusader.png" id="1_lsuym"]
[ext_resource type="Texture2D" uid="uid://cac7mkq4v7mvi" path="res://assets/attack.png" id="3_giu4l"]

[sub_resource type="Animation" id="Animation_iuels"]
resource_name = "swipe"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_usi66"]
_data = {
"swipe": SubResource("Animation_iuels")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_58n1h"]
height = 50.0

[node name="Crusader" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 4
collision_mask = 0
script = ExtResource("1_k7bas")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -9)
texture = ExtResource("1_lsuym")
hframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_usi66")
}

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_58n1h")

[node name="AttackCenter" type="Area2D" parent="."]
collision_layer = 20
collision_mask = 3

[node name="Attack" type="Sprite2D" parent="AttackCenter"]
position = Vector2(32, 0)
texture = ExtResource("3_giu4l")
flip_h = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackCenter"]
position = Vector2(-43, 0)
polygon = PackedVector2Array(35, -50, 56, -44, 73, -32, 86, -14, 87, 0, 83, 21, 73, 39, 62, 48, 78, 50, 97, 43, 114, 22, 116, -5, 110, -24, 97, -38, 78, -47, 54, -50)
disabled = true

[node name="enemy_weapon" type="Node" parent="AttackCenter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_58n1h")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_timer_timeout"]
